--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "att",
   "version": "0.0.1",
   "engines": {
-    "yarn": "1.2.1",
-    "node": "8.7.0"
+    "yarn": "^1.3.2",
+    "node": "^8.9.1"
   },
   "private": true,
   "dependencies": {
@@ -54,6 +54,8 @@
     "resolve-url-loader": "^2.1.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "stylelint": "^8.2.0",
+    "stylelint-config-standard": "^17.0.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.2.0",
