--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
@@ -38,6 +39,7 @@
     "merge-stream": "^1.0.1",
     "node-sass": "^4.5.3",
     "prop-types": "^15.6.0",
+    "raw-loader": "^0.5.1",
     "react": "^16.0.0",
     "react-addons-test-utils": "^15.6.0",
     "react-color": "^2.13.8",
