--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash-es": "^4.17.4",
     "merge-stream": "^1.0.1",
     "node-sass": "^4.5.3",
+    "numeral": "^2.0.6",
     "prop-types": "^15.6.0",
     "raw-loader": "^0.5.1",
     "react": "^16.0.0",
@@ -48,11 +49,13 @@
     "react-dom": "^16.0.0",
     "react-intl": "^2.4.0",
     "react-redux": "5.0.6",
+    "react-svg-loader": "^2.1.0",
     "react-table": "^6.6.0",
     "react-test-renderer": "^16.0.0",
     "redux": "3.7.2",
     "redux-form": "7.1.1",
     "redux-saga": "^0.16.0",
+    "reset-css": "^2.2.1",
     "resolve-url-loader": "^2.1.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
