[task 5] api loading. bugfix.

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -37,8 +37,10 @@ http {
         server_name  att.local  www.att.local;
 
         location / {
-            #root /usr/share/nginx/html;
             root /att/app;
+        }
+        location /api/tickets {
+            alias /att/app/static/tickets.json;
         }
     }
 }
