--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-copy-to-clipboard": "^5.0.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.0.0",
+    "react-infinite": "^0.12.1",
     "react-intl": "^2.4.0",
     "react-redux": "5.0.6",
     "react-svg-loader": "^2.1.0",
